feat : 관리자 페이지 셀럽 카테고리 추가
- 방송인, 인플루언서 추가.